.kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiii-namespace
  labels:
    name: kiii-namespace
