.kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kiii-namespace
spec:
  selector:
    app: backend
  ports:
    -  port: 80
       targetPort: 9191
  type: ClusterIP
